# ut-6350-predator-detection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
iNaturalist/Corvus_corax_images/: manual_identification.csv
iNaturalist/Gopherus_agassizii_images/: manual_identification.csv
src/: compare_detectors.py  detetctor_metrics.py
